[gd_scene load_steps=6 format=3 uid="uid://b604v5wika3j5"]

[ext_resource type="Script" path="res://scripts/you_won_screen.gd" id="1_e6km2"]
[ext_resource type="Texture2D" uid="uid://b0ws8whmsky40" path="res://graphics/ui/rounded_panel.png" id="2_s1hx0"]
[ext_resource type="Texture2D" uid="uid://bpnsb6by47vpw" path="res://graphics/ui/title.png" id="3_v0l7b"]
[ext_resource type="LabelSettings" uid="uid://be3dgkubpb7cx" path="res://graphics/ui/label_settings_standard.tres" id="4_xs450"]
[ext_resource type="PackedScene" uid="uid://dnet3v7h6r031" path="res://scenes/button.tscn" id="5_kc0c7"]

[node name="YouWonScreen" type="CanvasLayer"]
script = ExtResource("1_e6km2")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.572549)

[node name="UI" type="NinePatchRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -244.5
offset_top = -207.0
offset_right = 244.5
offset_bottom = 207.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_s1hx0")
region_rect = Rect2(0, 0, 1800, 608.951)
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 30
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="TitleBG" type="NinePatchRect" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 53.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_v0l7b")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 30
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Title" type="Label" parent="UI"]
layout_mode = 2
offset_right = 489.0
offset_bottom = 52.0
grow_horizontal = 2
text = "Congratulations!"
label_settings = ExtResource("4_xs450")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="FinalScoreLabel" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 180.0
offset_right = 489.0
offset_bottom = 232.0
text = "Final Score: x"
label_settings = ExtResource("4_xs450")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighestLevelLabel" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 73.0
offset_right = 489.0
offset_bottom = 125.0
text = "You beat all x levels"
label_settings = ExtResource("4_xs450")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TotalLoopsLabel" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 0
offset_top = 113.0
offset_right = 489.0
offset_bottom = 165.0
text = "and submitted x loops"
label_settings = ExtResource("4_xs450")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BestLoopLabel" type="Label" parent="UI"]
unique_name_in_owner = true
layout_mode = 2
offset_top = 232.0
offset_right = 489.0
offset_bottom = 284.0
text = "Best Loop: x words x points"
label_settings = ExtResource("4_xs450")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" parent="UI" instance=ExtResource("5_kc0c7")]
unique_name_in_owner = true
layout_mode = 1
offset_left = -90.0
offset_top = 98.0
offset_right = 90.0
offset_bottom = 162.0
text = "Restart Game"
